Corrected the alignment of message box entry.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,10 +254,13 @@ p {
 
 input {
   width: 100%;
+  /* text-align: start; */
 }
 
 #content-message {
   height: 230px;
+  width: 100%;
+  /* text-align: start; */
 }
 
 .content-submit-button {
